# AnaliseNumerico

./: #Formato_tarefa 2.lyx#  #Translate_Formato_tarefa 2.lyx#  CMakeLists.txt  ExactIntegration.cpp  Formato_tarefa 2.lyx  Formato_tarefa 2.lyx.emergency  Formato_tarefa 2.lyx~  Galerkin.cpp  Galerkin.h  GalerkinTest.cpp  Lax_Wendroff.nb  Linear_Advection.nb  Linear_Advection_Lax_Wendroff.nb  Linear_Advection_Lax_Wendroff_Func.nb  NonLinear.nb  NonLinear2.nb  NonLinear_Test_Gabriel.nb  NumericalIntegration.cpp  NumericalIntegration.h  Relatorio_Tarefa2.lyx  Relatorio_Tarefa2.lyx.emergency  Relatorio_Tarefa2.lyx~  Sol_Lineal.nb  Tarefa 2 Test new.nb  Tarefa_2_Métodos_Num.nb  Translate_Formato_tarefa 2.lyx  Translate_Formato_tarefa 2.lyx~  Transport_Problem.lyx  Transport_Problem_edit.lyx  main.cpp
Math_19_04_24/: Buckley.nb  Prueba transporte.nb  Transport_Problem_edit.lyx
Mathematicas/: newton2Func.nb  newtonSimple.nb
TareaAnterior/Debug/: AnaliseNumerico  Copia de PlotGGenFun3.nb  F1_GAUSS.xlsx  F1_SIMP_1_3.xlsx  F1_SIMP_3_8.xlsx  F1_TRAPECIOS.xlsx  F2_GAUSS.xlsx  F2_SIMP_1_3.xlsx  F2_SIMP_3_8.xlsx  F2_TRAPECIOS.xlsx  F3_GAUSS.xlsx  F3_SIMP_1_3.xlsx  F3_SIMP_3_8.xlsx  F3_TRAPECIOS.xlsx  P1_f4Table1_FUNC1_GAUSS.txt  P2_f4Table1_FUNC1_GAUSS.txt  P3_f4Table1_FUNC1_GAUSS.txt  P4_f4Table1_FUNC1_GAUSS.txt  PlotGGen.nb  PlotGGenFun1.nb  PlotGGenFun2.nb  PlotGGenFun3.nb  Table1_FUNC1_GAUSS.txt  Table1_FUNC1_S_1_3.txt  Table1_FUNC1_S_8_3.txt  Table1_FUNC1_TRAPE.txt  Table1_FUNC2_S_1_3.txt  f1Table1_FUNC1_TRAPE.txt  f2Table1_FUNC1_GAUSS.txt  f2Table1_FUNC1_S_1_3.txt  (+7 more)
